# my_cpp_lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  black_magic_header.hpp  clang_rt.asan_dynamic_runtime_thunk-x86_64.lib  matrix.hpp  pythonic.hpp  s_alias.h  salias.h  sfast_median.hpp  smatrix.hpp  spmr_array_tries_free_list_version.cpp  stries.hpp  sutils.cpp  sutils.hpp  utils.hpp
s_flat_hash_map/: README.md  s_detail.h  s_flat_hash_map.hpp  s_flat_map.hpp  s_flat_map_u32.hpp
s_flat_hash_map/bench/: bench_default_and_no_rehash.cpp  bench_default_and_noit.cpp  bench_default_vs_fast.cpp  bench_default_vs_no_check_dup.cpp  bench_default_vs_no_rehash.cpp  bench_default_vs_no_ret.cpp  bench_fmu32_vs_std.cpp  bench_fmu32_vs_std_find_exist.cpp  bench_fmu32_vs_std_insert_random.cpp  bench_fmu32_vs_std_insert_unique.cpp  bench_vs_std.cpp  s_flat_hash_map_bench.cpp  s_flat_hash_map_bench_emplace_default.cpp  s_flat_hash_map_bench_emplace_noit.cpp  s_flat_hash_map_bench_small.cpp
s_flat_hash_map/tests/: flat_hash_map_basic.cpp  s_flat_hash_map_basic.cpp  s_flat_hash_map_u32_basic.cpp  test_fmu32.cpp
s_hash_map/: README.md  s_bucket_map_u32.hpp  s_detail.h  s_flat_map.hpp  s_flat_map_u32.hpp  s_hash_map_policy.hpp
s_hash_map/bench/: bench_default_vs_fast.cpp  bench_default_vs_no_rehash.cpp  bench_find_exist.cpp  bench_fmu32_vs_std.cpp  bench_fmu32_vs_std_insert_random.cpp  bench_fmu32_vs_std_insert_unique.cpp  bench_insert_unique.cpp  bench_vs_std.cpp
s_hash_map/tests/: test_bmu32.cpp  test_fmu32.cpp
s_trie/: README.md  s_trie.hpp
sflatmap/: README.md  sflatmap.hpp  test.cpp
sflatmap/tests/: flat_hash_map_basic.cpp
stries/: strie.hpp  stries.hpp  stries_children_storage.hpp  stries_crtp.hpp  stries_deprecated.txt  stries_free_list.hpp  test.cpp
